--- a/i_papers.html
+++ b/i_papers.html
@@ -53,22 +53,23 @@
 
           <h1> Prepared in 2022 </h1>
 
-          [200] Egor Shulgin and Peter Richtárik <br>
+
+          [200] Abdurakhmon Sadiev, Dmitry Kovalev and Peter Richtárik <br>
+          <b>Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with Inexact Prox</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="papers/APDA_Inexact_Prox.pdf">preprint</a>] [code: APDA, APDA with Inexact Prox, APDA with Inexact Prox and Accelerated Gossip] <br>
+          <br>
+
+          [199] Egor Shulgin and Peter Richtárik <br>
           <b>Shifted compression framework: generalizations and improvements</b><br>
           38th Conference on Uncertainty in Artificial Intelligence (UAI 2022) <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.10452">arXiv</a>] [code: DCGD-SHIFT] <br>
           <br>
 
-          [199] Lukang Sun and Peter Richtárik <br>
+          [198] Lukang Sun and Peter Richtárik <br>
           <b>A Note on the convergence of mirrored Stein variational gradient descent under (L_0,L_1) smoothness condition</b><br>
           [<a href="https://arxiv.org/abs/2206.09709">arXiv</a>] [code: MSVGD] <br>
-          <br>
-
-          [198] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
-          <b>Federated optimization algorithms with random reshuffling and gradient compression</b><br>
-          <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2206.07021">arXiv</a>] [code: Q-RR, DIANA-RR, Q-NASTYA, DIANA-NASTYA] <br>
           <br>
 
           [197] Abdurakhmon Sadiev, Grigory Malinovsky, Eduard Gorbunov, Igor Sokolov, Ahmed Khaled, Konstantin Burlachenko and Peter Richtárik <br>
@@ -759,6 +760,7 @@
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
           Peter Richtárik and Sebastian Stich<br>
           <b>Stochastic distributed learning with gradient quantization and variance reduction</b><br>
+          To appear in Optimization Methods and Software <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code:
           DIANA, VR-DIANA, SVRG-DIANA]<br>
