--- a/i_team.html
+++ b/i_team.html
@@ -107,7 +107,7 @@
               <a href="https://scholar.google.com/citations?hl=en&user=ksqGMoEAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (08/2020-present), KAUST
+            <li><a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> (8/2020-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=3pA-LoQAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
@@ -117,10 +117,6 @@
 
             <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=4WOQZL0AAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
-            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (1/2019-present), KAUST
-              <a href="https://scholar.google.com/citations?hl=en&user=k252J7kAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
           </ul>
@@ -138,12 +134,12 @@
 
           <ul>
 
-            <li><a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> (7/2022-8/2022), from University of Washington </li>
+            <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (7/2022-12/2022), from ShanghaiTech University </li>
             <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (7/2022-10/2022), from University of Oxford </li>
-            <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (6/2022-12/2022), from ShanghaiTech University </li>
-            <li>Kaja Gruntkowska (6/2022-9/2022), from University of Warwick </li>            
+            <li><a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> (7/2022-8/2022), from University of Washington </li>
+            <li>Kaja Gruntkowska (6/2022-9/2022), from University of Warwick </li>
             <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-11/2022), from Yerevan State University </li>
-            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-present), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
+            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
 
           </ul>
 
@@ -244,6 +240,12 @@
 
 
           <ul>
+
+            <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (1/2019-6/2022), KAUST
+              <a href="https://scholar.google.com/citations?hl=en&user=k252J7kAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+              <br>thesis: <a href="https://arxiv.org/abs/2207.00392">Better Methods and Theory for Federated Learning: Compression, Client Selection, and Heterogeneity</a> <br>
+               <i>next position: Assistant Professor, Mohamed Bin Zayed University of Artificial Intelligence, Abu Shabi, United Arab Emirates</i>
+            </li>
 
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (9/2020-12/2021), Moscow Institute of Physics and Technology
               <a href="https://scholar.google.com/citations?user=85j2RqQAAAAJ&hl=en"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
