--- a/i_videotalks.html
+++ b/i_videotalks.html
@@ -52,7 +52,10 @@
 
 <h1>Video Talks</h1>
 
-
+<p>
+<a href="https://www.youtube.com/watch?v=yIF_l2g8rGY">The role of local training in federated learning</a> (90 mins)
+<br> <a href="https://betteraimeetup.com">Better AI Meetup, Bratislava, Slovakia</a>, 6/2022
+</p>
 
 <p>
 <a href="https://www.youtube.com/watch?v=OMVSzgsd7ZY">ProxSkip: Yes! Local gradient steps provably lead to communication acceleration! Finally!</a> (71 mins)
