--- a/index.html
+++ b/index.html
@@ -44,6 +44,150 @@
         <div id="content">
 
 
+
+<h3>July 7, 2022</h3>
+<h1>New Research Intern: Michał Grudzień (Oxford)</h1>
+<br>
+
+
+Let us all welcome <a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> to the team as a new VSRP research intern! Michal arrived to KAUST yesterday.
+Michał tudies toward an MA degree in Mathematics and Statistics at Oxford University. He is the recipient of the
+<a href="https://www.ox.ac.uk/admissions/undergraduate/fees-and-funding/oxford-support/palgrave-brown-scholarship-non-uk">Palgrave Brown Scholarship</a>. Prior to this, Michal studied in Warsaw, Poland, at the famous Stanislaw Staszic Lyceum.
+Some of Michał's achievements:
+<ul>
+<li>Member of a project for Oxford "Engineers without borders" society (classification and segmentation on Kaggle), 2021-now </li>
+<li> Research Internship with Yaodong Yang on bilevel optimization, 2021</li>
+<li>Finalist and Laureate in National Mathematical Olympiad, Poland, 2018 and 2019</li>
+<li>Volunteer for Women in Tech Summit II, 2018-2019</li>
+<li>Semi-Finalist in the Physics Olympiad, Poland, 2018</li>
+<li>Laureate and Finalist in Junior Mathematical Olympiad, Poland, 2016 and 2017</li>
+</ul>
+
+Michał has an "obsessive passion for machine learning and data analysis". Besides being native in Polish and fluent in English,
+he speaks a bit of Japanese, Chinese and Spanish. Also interestingly, Michal watched 300 anime shows in middle school. So, open with
+this subject at your own peril! Most importantly though, Michał can benchpress 125kg. I need a proof of that though. Who volunteers
+to join him in the Gym and video-tape this super-human feat?
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>July 6, 2022</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="papers/APDA_Inexact_Prox.pdf">
+"Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with Inexact Prox"</a> -
+joint work with
+<a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ&hl=ru">Abdurakhmon Sadiev</a> and <a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>.
+
+
+<br>
+<br>
+Abstract:
+<i>
+  Inspired by a recent breakthrough of Mishchenko et al. (2022), who for the first time showed that local gradient steps
+  can lead to provable communication acceleration, we propose an alternative algorithm which obtains the same communication
+  acceleration as their method (ProxSkip). Our approach is very different, however: it is based on the celebrated method of
+  Chambolle and Pock (2011), with several nontrivial modifications: i) we allow for an inexact computation of the prox operator
+  of a certain smooth strongly convex function via a suitable gradient-based method (e.g., GD, Fast GD or FSFOM), ii) we perform
+  a careful modification of the dual update step in order to retain linear convergence. Our general results offer the new
+  state-of-the-art rates for the class of strongly convex-concave saddle-point problems with bilinear coupling characterized
+  by the absence of smoothness in the dual function. When applied to federated learning, we obtain a theoretically better
+  alternative to ProxSkip: our method requires fewer local steps (O(κ^{1/3}) or O(κ^{1/4}), compared to O(κ^{1/2}) of ProxSkip),
+  and performs a deterministic number of local steps instead. Like ProxSkip, our method can be applied to optimization over a
+  connected network, and we obtain theoretical improvements here as well.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>June 27, 2022</h3>
+
+<h1>Samuel Horváth defended his PhD thesis today!</h1>
+
+Today, my PhD student <a href="https://samuelhorvath.github.io">Samuel Horváth</a>
+<br>
+<br>
+<img alt="Dr Samuel Horváth" src="imgs/Samuel.jpg" width="200">
+<br>
+<br>
+
+defended his PhD thesis entitled <a href="https://arxiv.org/abs/2207.00392">Better Methods and Theory for Federated Learning: Compression, Client Selection, and Heterogeneity.</a> <br><br>
+
+
+His PhD thesis committee members were:
+<a href="https://www.avestimehr.com/">Salman Avestimehr</a> (University of Southern California and FedML), <a href="https://mcanini.github.io/">Marco Canini</a> (KAUST),
+<a href="https://www.kaust.edu.sa/en/study/faculty/marc-genton">Marc G. Genton</a> (KAUST),
+<a href="https://ai.facebook.com/people/michael-rabbat">Mike Rabbat</a> (Facebook AI Research) and myself as the advisor and committee chair.
+<br>
+
+<br>
+<img alt="" src="imgs/Samuel-defense-Zoom.png" width="700">
+<br>
+<br>
+
+Samuel joined my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST in August 2017 as an MS/PhD student, right after completing his BS in Financial Mathematics at <a href="https://uniba.sk/en/">Comenius University, Bratislava,
+Slovakia</a>, ranked #1 in the program. He obtained his MS degree in Statistics at KAUST in December 2018.
+
+<br>
+<br>
+Interestingly, Samuel came to KAUST just 5 months after I joined KAUST in March 2017!
+<br>
+<br>
+
+Samuel has gone a long way since then; <a href="https://samuelhorvath.github.io/files/cv.pdf">look at his CV</a>!  His post-2017 accomplishments include:
+<br>
+<br>
+
+<ul>
+<li> Accepted the position of an <b>Assistant Prof</b> at <a href="https://mbzuai.ac.ae">MBZUAI, Abu Dhabi, United Arab Emirates</a>, about to start in Fall 2022</li>
+<li> Co-authored <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">20 papers during his PhD</a></li>
+<li> h index = 11, with 600+ citations according to <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">Google Scholar</a> </li>
+<li> 3 industrial internships during his PhD (Amazon AWS, Samsung AI and Facebook) </li>
+<li> <b>Al‐Kindi Statistics Research Student Award</b> (research award for top Statistics PhD student at KAUST), 2021 </li>
+<li> <b>Spotlight Paper at NeurIPS 2021</b> for the first-author paper <a href="https://openreview.net/forum?id=4fLr7H5D_eT">FjORD: Fair and Accurate Federated Learning Under Heterogeneous Targets with Ordered Dropout</a> </li>
+<li> Progress Towards PhD rated as “Outstanding”, KAUST, in years 2019, 2020 and 2021 </li>
+<li> <b>Best Paper Award (+ 1,888 USD cash prize) at the NeurIPS 2020 Spicy Federated Learning Workshop</b> for the paper <a href="https://openreview.net/pdf?id=vYVI1CHPaQg">A Better Alternative to Error Feedback for Communication‐Efficient Distributed Learning</a>, later published in ICLR 2021</li>
+<li> <b>Best Reviewer Award (Top 10%) @ NeurIPS 2020</b> </li>
+<li> <b>Spotlight paper at the NeuriPS 2020 Optimization for Machine Learning Workshop</b> for the first-authored paper <a href="https://epubs.siam.org/doi/abs/10.1137/21M1394308?journalCode=sjmdaq">Adaptivity of Stochastic Gradient Methods for Nonconvex Optimization</a>, later published by SIAM J on Mathematics of Data Science </a>
+<li> <b>Oral Paper at the NeuriPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning</b> for the paper <a href="https://arxiv.org/abs/2002.12410">On Biased Compression for Distributed Learning</a> </li>
+<li> Accepted to Machine Learning Summer School (MLSS) 2020, Tübingen (acceptance rate 180/1300+); also accepted to MLSS 2020 Indonesia </li>
+<li> <b>Top Reviewer Award @ NeurIPS 2019</b> </li>
+<li> <b>Best Poster Prize</b> for the paper <a href="https://arxiv.org/abs/1904.05115">Stochastic Distributed Learning with Gradient Quantization and Variance Reduction</a> at the Control, Information and Optimization Summer School, Voronovo, Russia (organized by B. Polyak). The poster was presented by coauthor D. Kovalev.
+<li> 157th/4049, IEEEXtreme 24‐Hour Programming Competition 12.0 joint with Dmitry Kovalev, 2018 </li>
+<li> <b>Best Poster Prize</b> (+ 500 EUR cash prize) for a poster based on the paper <a href="http://proceedings.mlr.press/v97/horvath19a.html">Nonconvex Variance Reduced Optimization with Arbitrary Sampling</a>, awarded as one of 2 out of total 170 posters presented at the Data Science Summer School (DS3), École Polytechnique, 2018  </li>
+<li> 131st /3,350 place, IEEEXtreme 24‐Hour Programming Competition 11.0 joint with Konstantin Mishchenko, 2017 </li>
+</ul>
+
+<br>
+Samuel is very unique in that he is at the same time highly talented (in science and sports), hard-working, has impeccable work ethics, and is incredibly humble and down-to-earth. An amazing person to work with!
+
+<br> <br>
+Dr Samuel Horváth, and soon-to-become Prof Samuel Horváth: all the best in your new adventures in Abu Dhabi!
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>June 21, 2022</h3>
 
 <h1>New Paper</h1>
@@ -101,70 +245,80 @@ investigate the complexity of the population limit MSVGD in terms of dimension d
 
 
 
-<h3>June 27, 2022</h3>
 
-<h1>Samuel Horváth defended his PhD thesis today!</h1>
-
-Today, my PhD student <a href="https://samuelhorvath.github.io">Samuel Horváth</a>
-<br>
-<br>
-<img alt="Dr Samuel Horváth" src="imgs/Samuel.jpg" width="200">
-<br>
+<h3>June 18, 2022</h3>
+<h1>New Research Intern: Omar Shaikh Omar (U of Washington)</h1>
 <br>
 
-defended his PhD thesis entitled <b>Better Methods and Theory for Federated Learning: Compression, Client Selection, and Heterogeneity.</b> <br><br>
-
-
-His PhD thesis committee members were:
-<a href="https://www.avestimehr.com/">Salman Avestimehr</a> (University of Southern California and FedML), <a href="https://mcanini.github.io/">Marco Canini</a> (KAUST),
-<a href="https://www.kaust.edu.sa/en/study/faculty/marc-genton">Marc G. Genton</a> (KAUST),
-<a href="https://ai.facebook.com/people/michael-rabbat">Mike Rabbat</a> (Facebook AI Research) and myself as the advisor and committee chair.
-<br>
-
-<br>
-<img alt="" src="imgs/Samuel-defense-Zoom.png" width="700">
+Please join me in welcoming <a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> to our team as a <a href="https://kgsp.kaust.edu.sa">KGSP (KAUST Gifted Student Program)</a>
+research intern! Omar just arrived to KAUST and his KGSP orientation is tomorrow! Omar is a CS undergraduate student at the <a href="https://www.washington.edu">University of Washington</a>.
 <br>
 <br>
-
-Samuel joined my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST in August 2017 as an MS/PhD student, right after completing his BS in Financial Mathematics at <a href="https://uniba.sk/en/">Comenius University, Bratislava,
-Slovakia</a>, ranked #1 in the program. He obtained his MS degree in Statistics at KAUST in December 2018.
-
-<br>
-<br>
-Interestingly, Samuel came to KAUST just 5 months after I joined KAUST in March 2017!
-<br>
-<br>
-
-Samuel has gone a long way since then; <a href="https://samuelhorvath.github.io/files/cv.pdf">look at his CV</a>!  His post-2017 accomplishments include:
-<br>
-<br>
-
+Selected distinctions, experience & interests:
 <ul>
-<li> Accepted the position of an <b>Assistant Prof</b> at <a href="https://mbzuai.ac.ae">MBZUAI, Abu Dhabi, United Arab Emirates</a>, about to start in Fall 2022</li>
-<li> Co-authored <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">20 papers during his PhD</a></li>
-<li> h index = 11, with 600+ citations according to <a href="https://scholar.google.com/citations?user=k252J7kAAAAJ">Google Scholar</a> </li>
-<li> 3 industrial internships during his PhD (Amazon AWS, Samsung AI and Facebook) </li>
-<li> <b>Al‐Kindi Statistics Research Student Award</b> (research award for top Statistics PhD student at KAUST), 2021 </li>
-<li> <b>Spotlight Paper at NeurIPS 2021</b> for the first-author paper <a href="https://openreview.net/forum?id=4fLr7H5D_eT">FjORD: Fair and Accurate Federated Learning Under Heterogeneous Targets with Ordered Dropout</a> </li>
-<li> Progress Towards PhD rated as “Outstanding”, KAUST, in years 2019, 2020 and 2021 </li>
-<li> <b>Best Paper Award (+ 1,888 USD cash prize) at the NeurIPS 2020 Spicy Federated Learning Workshop</b> for the paper <a href="https://openreview.net/pdf?id=vYVI1CHPaQg">A Better Alternative to Error Feedback for Communication‐Efficient Distributed Learning</a>, later published in ICLR 2021</li>
-<li> <b>Best Reviewer Award (Top 10%) @ NeurIPS 2020</b> </li>
-<li> <b>Spotlight paper at the NeuriPS 2020 Optimization for Machine Learning Workshop</b> for the first-authored paper <a href="https://epubs.siam.org/doi/abs/10.1137/21M1394308?journalCode=sjmdaq">Adaptivity of Stochastic Gradient Methods for Nonconvex Optimization</a>, later published by SIAM J on Mathematics of Data Science </a>
-<li> <b>Oral Paper at the NeuriPS 2020 Workshop on Scalability, Privacy, and Security in Federated Learning</b> for the paper <a href="https://arxiv.org/abs/2002.12410">On Biased Compression for Distributed Learning</a> </li>
-<li> Accepted to Machine Learning Summer School (MLSS) 2020, Tübingen (acceptance rate 180/1300+); also accepted to MLSS 2020 Indonesia </li>
-<li> <b>Top Reviewer Award @ NeurIPS 2019</b> </li>
-<li> <b>Best Poster Prize</b> for the paper <a href="https://arxiv.org/abs/1904.05115">Stochastic Distributed Learning with Gradient Quantization and Variance Reduction</a> at the Control, Information and Optimization Summer School, Voronovo, Russia (organized by B. Polyak). The poster was presented by coauthor D. Kovalev.
-<li> 157th/4049, IEEEXtreme 24‐Hour Programming Competition 12.0 joint with Dmitry Kovalev, 2018 </li>
-<li> <b>Best Poster Prize</b> (+ 500 EUR cash prize) for a poster based on the paper <a href="http://proceedings.mlr.press/v97/horvath19a.html">Nonconvex Variance Reduced Optimization with Arbitrary Sampling</a>, awarded as one of 2 out of total 170 posters presented at the Data Science Summer School (DS3), École Polytechnique, 2018  </li>
-<li> 131st /3,350 place, IEEEXtreme 24‐Hour Programming Competition 11.0 joint with Konstantin Mishchenko, 2017 </li>
+<li>Student researcher at the University of Washington STAR Lab (http://www.uwstarlab.org), 2021</li>
+<li>Deployed two implementations of the YOLO v4 on Jetson Nano and used models on video streams of traﬀic intersections to detect pedestrians both crossing and waiting to cross </li>
+<li>Trained custom YOLO v4 model for pedestrian detection using data from the Caltech Pedestrian Detection Benchmark and the MIOVision Traﬀic Camera Dataset </li>
+<li>Student researcher at the Washington eXperimental Mathematics Lab (WXML), 2020-2021 </li>
+<li>Constructed guesses for compact regions based on a subset of the roots of complex polynomials to find a local analog of the Gauss-Lucas Theorem and disproved the eligibility of multiple guesses </li>
+<li>Built a Python library that simulates the process of finding counterexamples for guesses and creates animations of the process using matplotlib, scipy, and sympy </li>
+<li>Presented at the Brown University’s Symposium for Undergraduates in the Mathematical Sciences (SUMS), and at the WXML conference </li>
+<li>Data Science Intern at Uliza (https://www.uliza.org), 2020</li>
+<li>Developed the idea for a spell checker for the African language Luganda with a team of programmers and linguists </li>
+<li>Wrote several specification documents for data collection and a terminal interface </li>
+<li>Scrapped the Luganda Bible and an English/Luganda dictionary for a total of 80,000+ unique words and 70,000+ sentences </li>
+<li>Built core spell checker in Python by connecting an nltk part of speech tagger, a lemmatizer built specifically for Luganda, and an edit-distance suggestion system </li>
+<li>Top 500 among US and Canada Universities, Putnam Mathematical Competition, 2019</li>
+<li>Volunteer Teaching Assistance at Math Circle, 2019-2020 </li>
+<li>Bronze medal in the Balkan Mathematical Olympiad, 2018</li>
 </ul>
 
-<br>
-Samuel is very unique in that he is at the same time highly talented (in science and sports), hard-working, has impeccable work ethics, and is incredibly humble and down-to-earth. An amazing person to work with!
 
-<br> <br>
-Dr Samuel Horváth, and soon-to-become Prof Samuel Horváth: all the best in your new adventures in Abu Dhabi!
 <br>
+Omar, welcome!
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+
+<h3>June 16, 2022</h3>
+<h1>New Research Intern: Kaja Gruntkowska (Warwick)</h1>
+<br>
+
+Please join me in welcoming Kaja Gruntkowska to the team as a <a href="https://vsrp.kaust.edu.sa/about-vsrp">VSRP intern</a>!!!
+Kaja is a 3rd year undergraduate student of
+<a href="https://warwick.ac.uk/study/undergraduate/courses/mathsstatsbsc/">Mathematics and Statistics at the University of Warwick, UK</a>.
+Kaja will arrive at KAUST later this month. A few remarks about Kaja's current and past experience and successes:
+
+<ul>
+<li>one of the top students in her cohort at Warwick (top 3 in 2020-2021)</li>
+<li>received the Academic Excellence Prize for overall performance at Warwick, 2020-2021</li>
+<li>was a finalist of Polish Statistics Olympiad – 1st place winner on voivodeship stage, 2019</li>
+<li>won 2nd place at "First Step to Fields Medal", 2019</li>
+<li>won 3rd place at Jagiellonian Mathematical Tournament, 2018</li>
+<li>participated (twice) at the Congress of Young Polish Mathematicians, 2016 and 2018</li>
+<li>co-organized team Lodz for ‘Naboj Junior’, 2018</li>
+<li>led extracurricular Maths classes at Lodz University of Technology High School, 2018-2019 </li>
+</ul>
+
+
+
+Kaja likes tutoring high school students in mathematics, acts as a mentor coordinator at Warwick, and is interested in sport and food sustainability.
+
+<br>
+
+<br>
+Omar, welcome!
+<br>
+
 
 <br>
 <br>
@@ -346,7 +500,7 @@ Federated learning uses a set of techniques to efficiently distribute the traini
 
 
 <h3>June 1, 2022</h3>
-<h1>A New Research Intern: Arto Maranjyan</h1>
+<h1>New Research Intern: Arto Maranjyan (Yerevan State University)</h1>
 <br>
 
 
@@ -1054,7 +1208,7 @@ Finally, our theory is corroborated in practice: we see a significant improvemen
 
 
 <h3>February 2, 2022</h3>
-<h1>A New Research Intern: Abdurakhmon Sadiev</h1>
+<h1>New Research Intern: Abdurakhmon Sadiev (MIPT)</h1>
 <br>
 
 
@@ -1471,24 +1625,19 @@ The award comes with a 1,000 USD cash prize for each. Congratulations to all of 
 
 
 
+<h3>November 10, 2021</h3>
+<h1>Talk at the SMAP Colloquium at the University of Portsmouth, United Kingdom</h1>
+<br>
+
+Today I gave a 1hr research talk on the EF21 method at the SMAP Colloquium, University of Portsmouth, UK.
+<br>
 
 
-
-
-
-                    <h3>November 10, 2021</h3>
-                    <h1>Talk at the SMAP Colloquium at the University of Portsmouth, United Kingdom</h1>
-                    <br>
-
-                    Today I gave a 1hr research talk on the EF21 method at the SMAP Colloquium, University of Portsmouth, UK.
-                     <br>
-
-
-                    <br>
-                    <br>
-                    <img alt="" src="imgs/fancy-line.png" width="196" height="36">
-                    <br>
-                    <br>
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
