--- a/i_papers.html
+++ b/i_papers.html
@@ -53,9 +53,14 @@
 
           <h1> Prepared in 2022 </h1>
 
+          [201] Grogory Malinovsky, Kai Yi and Peter Richtárik <br>
+          <b>Variance reduced ProxSkip: Algorithm, theory and application to federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="papers/ProxSkip-VR.pdf">preprint</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
+          <br>
 
           [200] Abdurakhmon Sadiev, Dmitry Kovalev and Peter Richtárik <br>
-          <b>Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with Inexact Prox</b><br>
+          <b>Communication acceleration of local gradient methods via an accelerated primal-dual algorithm with inexact prox</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="papers/APDA_Inexact_Prox.pdf">preprint</a>] [code: APDA, APDA with Inexact Prox, APDA with Inexact Prox and Accelerated Gossip] <br>
           <br>
