update to arXiv

--- a/i_papers.html
+++ b/i_papers.html
@@ -62,7 +62,7 @@
           [200] Abdurakhmon Sadiev, Dmitry Kovalev and Peter Richtárik <br>
           <b>Communication acceleration of local gradient methods via an accelerated primal-dual algorithm with inexact prox</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="papers/APDA_Inexact_Prox.pdf">preprint</a>] [code: APDA, APDA with Inexact Prox, APDA with Inexact Prox and Accelerated Gossip] <br>
+          [<a href="https://arxiv.org/abs/2207.03957">arXiv</a>] [code: APDA, APDA with Inexact Prox, APDA with Inexact Prox and Accelerated Gossip] <br>
           <br>
 
           [199] Egor Shulgin and Peter Richtárik <br>
@@ -765,7 +765,7 @@
           [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
           Peter Richtárik and Sebastian Stich<br>
           <b>Stochastic distributed learning with gradient quantization and variance reduction</b><br>
-          To appear in Optimization Methods and Software <br>
+          To appear in Optimization Methods and Software, 2022 <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code:
           DIANA, VR-DIANA, SVRG-DIANA]<br>
