--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ to join him in the Gym and video-tape this super-human feat?
 <h1>New Paper</h1>
 
 <span class="important">New paper out:</span>
-<a href="papers/APDA_Inexact_Prox.pdf">
+<a href="https://arxiv.org/abs/2207.03957">
 "Communication Acceleration of Local Gradient Methods via an Accelerated Primal-Dual Algorithm with Inexact Prox"</a> -
 joint work with
 <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ&hl=ru">Abdurakhmon Sadiev</a> and <a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a>.
