--- a/i_papers.html
+++ b/i_papers.html
@@ -519,7 +519,7 @@
 
           [130] Adil Salim, Laurent Condat, Konstantin Mishchenko, and Peter Richtárik <br>
           <b>Dualize, split, randomize: fast nonsmooth optimization algorithms</b><br>
-          to appear in Journal of Optimization Theory and Applications <br>
+          <a hreg="https://link.springer.com/article/10.1007/s10957-022-02061-8">Journal of Optimization Theory and Applications, 2022</a> <br>
           <a href="https://opt-ml.org/papers/2020/paper_54.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/2004.02635">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_54.pdf">poster</a>] [code: PDDY, SPDDY, SPD3O, SPAPC] <br>
           <br>
