--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ Kaja likes tutoring high school students in mathematics, acts as a mentor coordi
 <br>
 
 <br>
-Omar, welcome!
+Kaja, welcome!
 <br>
 
 
