--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
 
           <h1> Prepared in 2022 </h1>
 
-          [201] Grogory Malinovsky, Kai Yi and Peter Richtárik <br>
+          [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
           <b>Variance reduced ProxSkip: Algorithm, theory and application to federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="papers/ProxSkip-VR.pdf">preprint</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
