--- a/i_talks.html
+++ b/i_talks.html
@@ -66,6 +66,10 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 </p>
 
 <p>
+Mathematics and Applications Colloquium, <a href="https://www.kaust.edu.sa/en">KAUST</a>, Thuwal, Saudi Arabia, September 13, 2022 (invited)
+</p>
+
+<p>
 <a href="https://crossfl2022.github.io">CrossFL: Cross-Community Federated Learning: Algorithms, Systems and Co-designs</a>,
   A workshop associated with the <a href="https://mlsys.org">MLSys</a> conference, Santa Clara, USA, September 1, 2022 (keynote)
 </p>
@@ -86,17 +90,7 @@ Introduction to Machine Learning 1/2, Aramco, November 3-6, 2022
 </p>
 --->
 
-<p>
-Better AI Meetup, Bratislava, Slovakia, June 22, 2022 (invited)
-</p>
 
-<p>
-PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="https://fmph.uniba.sk">Faculty of Mathematics, Physics and Informatics</a>, Comenius University, Bratislava, Slovakia, June 20-24, 2022
-</p>
-
-<p>
-<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
-</p>
 
 
 
@@ -112,16 +106,34 @@ Università della Svizzera italiana, Lugano, Switzerland, May 9, 2022 (invited l
 <h1>2022 Talks</h1>
 
 <p>
+[209]
+<a href="https://www.youtube.com/watch?v=yIF_l2g8rGY">Better AI Meetup</a>, Bratislava, Slovakia, June 22, 2022 (invited)
+</p>
+
+<p>
+[208]
+PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="https://fmph.uniba.sk">Faculty of Mathematics, Physics and Informatics</a>, Comenius University, Bratislava, Slovakia, June 20-24, 2022
+</p>
+
+<p>
+[207]
+<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 13-16, 2022 (invited)
+</p>
+
+<p>
 [206] PhD Course "Introduction to Stochastic Gradient Descent" (18 hrs), Vienna Graduate School for Computational Optimization (VGSCO), Vienna, Austria, May 30-June 3, 2022 (invited)
 </p>
 
-<p> [205]  <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">Stochastic Numerics and Statistical Learning: Theory and Applications Workshop,</a> KAUST, Saudi Arabia, May 15-28, 2022 (invited)
+<p>
+[205]  <a href="https://cemse.kaust.edu.sa/events/event/snsl-workshop">Stochastic Numerics and Statistical Learning: Theory and Applications Workshop,</a> KAUST, Saudi Arabia, May 15-28, 2022 (invited)
 </p>
 
-<p> [204] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
+<p>
+[204] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
 </p>
 
-<p> [203] Department of Mathematics Colloquium, Penn State University, USA, April 27, 2022 (invited)
+<p>
+[203] Department of Mathematics Colloquium, Penn State University, USA, April 27, 2022 (invited)
 </p>
 
 <p>
@@ -187,7 +199,7 @@ Privacy, Fairness, Robustness, Personalization and Data Ownership"</a>, virtual,
 </p>
 
 <p>
-[190] </a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
+[190] <a href="https://www.kaust.edu.sa/en">KAUST</a>-<a href="http://ai.ruc.edu.cn/english/index.htm">GSAI</a> Joint Workshop on Advances in AI, virtual, November 25, 2021 (invited)
 </p>
 
 <p>
