--- a/i_papers.html
+++ b/i_papers.html
@@ -56,7 +56,7 @@
           [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
           <b>Variance reduced ProxSkip: Algorithm, theory and application to federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="papers/ProxSkip-VR.pdf">preprint</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
+          [<a href="https://arxiv.org/abs/2207.04338">arXiv</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
           <br>
 
           [200] Abdurakhmon Sadiev, Dmitry Kovalev and Peter Richtárik <br>
