--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <h1>New Paper</h1>
 
 <span class="important">New paper out:</span>
-<a href="papers/ProxSkip-VR.pdf">
+<a href="https://arxiv.org/abs/2207.04338">
 "Variance Reduced ProxSkip: Algorithm, Theory and Application to Federated Learning"</a> -
 joint work with
 <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> and <a href="https://kaiyi.me">Kai Yi</a>.
